--- a/CommonTasksLib/CommonTasksLib.csproj
+++ b/CommonTasksLib/CommonTasksLib.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structs\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Collections\" />
