Added Transfer method
Added support to transfer properties with the same name between class
instances of any type, if the properties are assignable and convertible.

--- a/CommonTasksLib/CommonTasksLib.csproj
+++ b/CommonTasksLib/CommonTasksLib.csproj
@@ -40,12 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structs\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Collections\" />
-    <Folder Include="Data\" />
     <Folder Include="UnSorted\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
