--- a/LibTests/LibTests.csproj
+++ b/LibTests/LibTests.csproj
@@ -51,8 +51,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="TestClass.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="StringExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ObjectExtensionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonTasksLib\CommonTasksLib.csproj">
