Convert method added

--- a/LibTests/LibTests.csproj
+++ b/LibTests/LibTests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestAttribute.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="StringExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
