--- a/CommonTasksLib/CommonTasksLib.csproj
+++ b/CommonTasksLib/CommonTasksLib.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CommonTasksLib</RootNamespace>
-    <AssemblyName>CommonTasksLib</AssemblyName>
+    <AssemblyName>CommonTasks.HelperLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
