--- a/LibTests/LibTests.csproj
+++ b/LibTests/LibTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ObjectExtensionTests.cs" />
     <Compile Include="MvcHelperExtensionTests.cs" />
+    <Compile Include="ThreadingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonTasksLib\CommonTasksLib.csproj">
