--- a/CommonTasksLib/CommonTasksLib.csproj
+++ b/CommonTasksLib/CommonTasksLib.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\CollectionExtensions.cs" />
+    <Compile Include="Data\ADOExtensions\AbstractDAO.cs" />
     <Compile Include="Data\ADOExtensions\ADOHelperExtensions.cs" />
+    <Compile Include="Data\ADOExtensions\GeneralEnums.cs" />
     <Compile Include="Data\ADOExtensions\GenericDAO.cs" />
     <Compile Include="Data\Compare.cs" />
     <Compile Include="Data\MvcHelperExtensions.cs" />
